force-app/main/default/objects/Integration_Error_Log__c/Integration_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Error Log</label>
    <nameField>
        <label>Integration Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>