force-app/main/default/objects/Integration_Error_Log__c/fields/Data_Stream_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Stream_Id__c</fullName>
    <label>Data Stream Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>